--- a/src/pages/Booking/Booking.css
+++ b/src/pages/Booking/Booking.css
@@ -11,3 +11,7 @@
     padding: 20px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   }
+  /* В Booking.css */
+h1 span {
+  transition: opacity 0.3s ease;
+}
